# smtp2s

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: rust.yml
docker/: init-aws.sh
sample-configs/: local-storage-config.json  s3-config.json
src/: lib.rs  main.rs  metrics.rs
src/smtp/: models.rs  protocol.rs
src/smtp/protocol/: mod.rs  tests.rs
src/smtp2s/: mod.rs  models.rs
src/storage/: attachment.rs  local.rs  mod.rs  s3.rs
tests/: local_storage.rs  s3_storage.rs
