[package]
name = "smtp2s"
version = "0.1.0"
edition = "2021"

[lib]
name = "smtp2s"
path = "src/lib.rs"

[[bin]]
name = "smtp2s"
path = "src/main.rs"

[dependencies]
aws-config = "1.8.6"
aws-sdk-s3 = "1.104.0"
base64 = "0.22.1"
chrono = "0.4.41"
mail-parser = "0.11.1"
mime_guess = "2.0.5"
sanitize-filename = "0.6.0"
serde = {version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "json", "registry"] }
twoway = "0.2.2"
ulid = "1.2.1"
