[package]
name = "smtp2s"
version = "0.1.0"
edition = "2021"

[lib]
name = "smtp2s"
path = "src/lib.rs"

[[bin]]
name = "smtp2s"
path = "src/main.rs"

[dependencies]
async-recursion = "1.1.1"
async-trait = "0.1.89"
aws-config = {version = "1.8.6", features = ["behavior-version-latest"]}
aws-sdk-s3 = {version = "1.105.0", features = ["behavior-version-latest"]}
aws-smithy-http = "0.62.3"
base64 = "0.22.1"
chrono = "0.4.41"
clap = { version = "4.5.47", features = ["derive"] }
dotenvy = "0.15.7"
mail-parser = "0.11.1"
mime_guess = "2.0.5"
sanitize-filename = "0.6.0"
serde = {version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "json", "registry"] }
twoway = "0.2.2"
ulid = "1.2.1"
lazy_static = "1.5.0"
opentelemetry = { version = "0.20.0", features = ["metrics"] }
opentelemetry_sdk = { version = "0.20.0", features = ["rt-tokio"] }
opentelemetry-prometheus = "0.13.0"
prometheus = { version = "0.13.4", features = ["process"] }
hyper = { version = "0.14", features = ["full"] }


[dev-dependencies]
lettre = { version = "0.11.7", default-features = false, features = ["tokio1", "builder", "smtp-transport"] }
tempfile = "3.10.1"